Prevent horizontal overflow by services section title

--- a/styles/services.css
+++ b/styles/services.css
@@ -11,12 +11,24 @@
   text-transform: uppercase;
 }
 
+@media (max-width: 25em) {
+  .services__title {
+    font-size: 1.5em;
+  }
+}
+
 .services__subtitle {
   color: #777;
   font-family: "Roboto Slab", serif;
   font-size: 20px;
   font-weight: normal;
   margin: 0 0 86px;
+}
+
+@media (max-width: 25em) {
+  .services__subtitle {
+    font-size: 1em;
+  }
 }
 
 .services__row::before, .services__row::after {
